(cram (
  deps
  ./bin/common
  ./bin/fe
  ./bin/fe-server
  ./bin/prepare
  ./bin/program_linking_with_iron_lib.exe
  ./bin/setup-script
  ./bin/simple-sync-state
  ./etc/hgrc
  (source_tree ./bin/broken_hg)
  (source_tree ./lib)
  (source_tree ./sample-repos)
  ../hg/hgrc
  (source_tree ../hg/extensions)
  ../bin/fe.exe
  ../bin/bashrc))
