(cram (
  deps
  ./bin/common
  ./bin/completion-test
  ./bin/fe
  ./bin/fe-server
  ./bin/prepare
  ./bin/program_linking_with_iron_lib.exe
  ./bin/setup-script
  ./bin/simple-sync-state
  ./etc/hgrc.in
  (source_tree ./bin/broken_hg)
  (source_tree ./lib)
  (source_tree ./sample-repos)
  ../hg/hgrc.in
  ../hg/extensions/enforce_username.py
  ../bin/fe.exe
  ../bin/bashrc))
